--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently \"nuxt dev\" \"cd electrodoc.admin-backend && node index.js\"",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -26,6 +26,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@types/lodash": "^4.14.202",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.1.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   },
