--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^5.1.0",
