--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^13.4.0",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "nuxt": "^3.9.0",
     "pinia": "^2.1.7",
